Fix SPA refresh and upload gallery images

--- a/Interior_designer_project/render.yaml
+++ b/Interior_designer_project/render.yaml
@@ -18,7 +18,7 @@ services:
         sync: false          # You will paste your Render static-site URL here
 
   # ─── Frontend: React Static Site ──────────────────────────────────────────
-  - type: web
+  - type: static
     name: interior-designer-frontend
     runtime: static
     rootDir: frontend
