--- a/Interior_designer_project/render.yaml
+++ b/Interior_designer_project/render.yaml
@@ -12,23 +12,23 @@ services:
         value: production
       - key: PORT
         value: 10000
+      - key: SEED_SECRET
+        value: seed-interior-2026
       - key: MONGO_URI
-        sync: false          # You will paste this in the Render dashboard
+        sync: false
       - key: FRONTEND_URL
-        sync: false          # You will paste your Render static-site URL here
+        sync: false
 
-  # ─── Frontend: React Static Site ──────────────────────────────────────────
-  - type: static
+  # ─── Frontend: React App (Web Service with Node runtime for SPA fix) ──────
+  - type: web
     name: interior-designer-frontend
-    runtime: static
+    runtime: node
     rootDir: frontend
     buildCommand: npm install && npm run build
-    staticPublishPath: build
+    startCommand: npm start
     plan: free
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
     envVars:
+      - key: PORT
+        value: 3000
       - key: REACT_APP_API_URL
-        sync: false          # You will paste your backend Render URL here
+        sync: false
